tests/rascal/negative/name_errors/L2/7_undecl-in-case1.ob
MODULE Bla;




BEGIN
  CASE x OF
   3: y := 1
  END
END Bla.